<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.tomato</groupId>
    <artifactId>tomato-platform</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>tomato-module</module>
        <module>tomato-framework</module>
        <module>tomato-book</module>
        <module>tomato-gateway</module>
        <module>tomato-example</module>
    </modules>
    <name>${project.artifactId}</name>
    <properties>
        <!-- maven 全局版本号管理 -->
        <revision>1.0-SNAPSHOT</revision>
        <!-- java 版本管理 -->
        <java.version>17</java.version>
        <!-- Maven 相关配置 -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!-- bom 版本依赖 -->
            <dependency>
                <groupId>com.tomato</groupId>
                <artifactId>tomato-bom</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>${project.name}</finalName>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>
    <profiles>
        <profile>
            <id>dev</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>dev</profiles.active>
                <nacos.username>nacos</nacos.username>
                <nacos.password>nacos</nacos.password>
            </properties>
            <activation>
                <!-- 默认环境 -->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
    </profiles>
    <!--  maven 依赖的下载是从 repositories 中获取的 -->
    <repositories>
        <repository>
            <!-- 远程仓库唯一标识符 -->
            <id>spring-milestones</id>
            <!--描述 -->
            <name>Spring Milestones</name>
            <!--远程仓库url -->
            <url>https://repo.spring.io/milestone</url>
            <!-- 禁止从公共仓库下载snapshot构件 -->
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <!-- 禁止从公共仓库下载releases构件 -->
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>
    <!-- mvn clean install site  命令能够成功处理 -->
    <pluginRepositories>
        <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
        <pluginRepository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>
</project>